--- a/JDKUpdater.app/Contents/Info.plist
+++ b/JDKUpdater.app/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>24C101</string>
+	<string>24F74</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -23,34 +23,46 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>14.0.73</string>
+	<string>14.0.83</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>109</string>
+	<string>119</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>24C94</string>
+	<string>24F74</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>15.2</string>
+	<string>15.5</string>
 	<key>DTSDKBuild</key>
-	<string>24C94</string>
+	<string>24F74</string>
 	<key>DTSDKName</key>
-	<string>macosx15.2</string>
+	<string>macosx15.5</string>
 	<key>DTXcode</key>
-	<string>1620</string>
+	<string>1640</string>
 	<key>DTXcodeBuild</key>
-	<string>16C5032a</string>
+	<string>16F6</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.developer-tools</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>14.0</string>
+	<string>15.0</string>
+	<key>NSAppDataUsageDescription</key>
+	<string>We need access to other application data to search for JDK distributions</string>
+	<key>NSDesktopFolderUsageDescription</key>
+	<string>We need to access the desktop folder to search for JDK distributions</string>
+	<key>NSDocumentsFolderUsageDescription</key>
+	<string>We need to access the documents folder to search for JDK distributions</string>
+	<key>NSDownloadsFolderUsageDescription</key>
+	<string>We need to access the downloads folder to search for JDK distributions</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Gerrit Grunwald</string>
+	<key>NSNetworkVolumesUsageDescription</key>
+	<string>We need to access the network volumes to search for JDK distributions</string>
+	<key>NSRemovableVolumesUsageDescription</key>
+	<string>We need to access removable volumes to search for JDK distributions</string>
 </dict>
 </plist>
