--- a/JDKUpdater_14.0.89.app/Contents/Info.plist
+++ b/JDKUpdater_14.0.89.app/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>25A354</string>
+	<string>24G90</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -23,33 +23,33 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>26.0.0</string>
+	<string>14.0.89</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>133</string>
+	<string>125</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>25A352</string>
+	<string>24F74</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>26.0</string>
+	<string>15.5</string>
 	<key>DTSDKBuild</key>
-	<string>25A352</string>
+	<string>24F74</string>
 	<key>DTSDKName</key>
-	<string>macosx26.0</string>
+	<string>macosx15.5</string>
 	<key>DTXcode</key>
-	<string>2600</string>
+	<string>1640</string>
 	<key>DTXcodeBuild</key>
-	<string>17A324</string>
+	<string>16F6</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.developer-tools</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>26.0</string>
+	<string>15.0</string>
 	<key>NSAppDataUsageDescription</key>
 	<string>We need access to other application data to search for JDK distributions</string>
 	<key>NSDesktopFolderUsageDescription</key>
