--- a/JDKUpdater.app/Contents/PlugIns/JDKUpdaterWidgetExtension.appex/Contents/Info.plist
+++ b/JDKUpdater.app/Contents/PlugIns/JDKUpdaterWidgetExtension.appex/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>25A362</string>
+	<string>25B78</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -19,29 +19,29 @@
 	<key>CFBundlePackageType</key>
 	<string>XPC!</string>
 	<key>CFBundleShortVersionString</key>
-	<string>26.0.5</string>
+	<string>26.0.7</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>181</string>
+	<string>183</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>25A352</string>
+	<string>25B74</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>26.0</string>
+	<string>26.1</string>
 	<key>DTSDKBuild</key>
-	<string>25A352</string>
+	<string>25B74</string>
 	<key>DTSDKName</key>
-	<string>macosx26.0</string>
+	<string>macosx26.1</string>
 	<key>DTXcode</key>
-	<string>2601</string>
+	<string>2611</string>
 	<key>DTXcodeBuild</key>
-	<string>17A400</string>
+	<string>17B100</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>26.0</string>
 	<key>NSExtension</key>
