--- a/JDKUpdater.app/Contents/Info.plist
+++ b/JDKUpdater.app/Contents/Info.plist
@@ -23,13 +23,13 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>26.0.13</string>
+	<string>26.0.15</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>189</string>
+	<string>193</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -52,6 +52,21 @@
 	<string>26.0</string>
 	<key>NSAppDataUsageDescription</key>
 	<string>We need access to other application data to search for JDK distributions</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>hansolo.eu</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSExceptionMinimumTLSVersion</key>
+				<string>TLSv1.1</string>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
 	<key>NSDesktopFolderUsageDescription</key>
 	<string>We need to access the desktop folder to search for JDK distributions</string>
 	<key>NSDocumentsFolderUsageDescription</key>
